Add contact page and other stuff

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -280,26 +280,31 @@ p > b {
 // }
 .section {
   text-align: center;
+  width: 100%;
   .section-content {
-    padding: 0 100px;
+    padding: 50px 100px;
     text-align: center;
-    width: 100%;
     h1 {
       font-size: 15em;
+      font-size: 15vw;
       font-weight: 500;
     }
     h2 {
       font-size: 2.5em;
+      font-size: 2.5vw;
     }
     h3 {
       font-size: 6em;
+      font-size: 6vw;
     }
     h4 {
       font-size: 3em;
+      font-size: 3vw;
     }
     p {
       margin-top: 30px;
       font-size: 2em;
+      font-size: 2vw;
       text-align: center;
       b {
         font-weight: 500;
@@ -318,20 +323,153 @@ p > b {
 }
 
 .fp-controlArrow {
-  padding: 0 50px;
+  padding: 0 25px;
 }
 
 .section-content .card {
   margin: 10px 75px;
-  .card-body {
-    blockquote {
-      p {
-        font-size: 36px;
-      }
-    }
+  p {
+    font-size: 1.5vw;
   }
 }
 
 .dark {
   color: $grey-alt-200;
+}
+
+.row {
+  text-align: center;
+}
+
+/* about us page */
+
+#team {
+    background: #eee !important;
+}
+
+.team {
+  .btn-primary:hover,
+  .btn-primary:focus {
+      background-color: #108d6f;
+      border-color: #108d6f;
+      box-shadow: none;
+      outline: none;
+  }
+  .btn-primary {
+    color: #fff;
+    background-color: $red-200;
+    border-color: $red-200;
+}
+}
+
+
+
+
+section {
+    padding: 60px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: $red-200;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#team .card {
+    border: none;
+    background: #ffffff;
+}
+
+.image-flip:hover .backside,
+.image-flip.hover .backside {
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    border-radius: .25rem;
+}
+
+.image-flip:hover .frontside,
+.image-flip.hover .frontside {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+.mainflip {
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -moz-transition: 1s;
+    -moz-transform: perspective(1000px);
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+.frontside {
+    position: relative;
+    -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    z-index: 2;
+    margin-bottom: 30px;
+}
+
+.backside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+}
+
+.frontside,
+.backside {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transition: 1s;
+    -moz-transform-style: preserve-3d;
+    -o-transition: 1s;
+    -o-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+}
+
+.frontside .card,
+.backside .card {
+    min-height: 312px;
+}
+
+.backside .card a {
+    font-size: 18px;
+    color: $red-200 !important;
+}
+
+.frontside .card .card-title,
+.backside .card .card-title {
+    color: $red-200 !important;
+}
+
+.frontside .card .card-body img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
 }
