--- a/app/views/static_pages/inspiration.html.erb
+++ b/app/views/static_pages/inspiration.html.erb
@@ -16,6 +16,9 @@
       </div>
   	</div>
   	<div class="section">
+  	  
+  	  <!-- Slides -->
+  	  
   	  <div class="section-content dark">
     	  <h3>The Moment of Inspiration</h3>
         <p class="lead">
@@ -53,39 +56,88 @@
   	  </div>
   	  <div class="slide">
   	    <div class="section-content">
-  	      <div class="card">
-            <h5 class="card-header">
-              Quote
-            </h5>
-            <div class="card-body">
-              <blockquote class="blockquote">
-                <p>
-                  “The mask was a thing on its own, behind which Jack hid, 
-                  liberated from shame and self-consciousness.[...]He looked in 
-                  astonishment, no longer at himself but at an awesome stranger”
-                  (64).
-                </p>
-                <footer class="blockquote-footer">Narrator in <cite title="Source Title">Lord of the Flies</cite></footer>
-              </blockquote>
+  	      
+  	      <!-- grid -->
+  	      
+  	      <div class="row">
+    	      <div class="card">
+              <h5 class="card-header">
+                <u>Lord of the Flies</u>
+              </h5>
+              <div class="card-body">
+                <blockquote class="blockquote">
+                  <p>
+                    “The mask was a thing on its own, behind which Jack hid, 
+                    liberated from shame and self-consciousness.[...]He looked in 
+                    astonishment, no longer at himself but at an awesome stranger”
+                    (64).
+                  </p>
+                  <footer class="blockquote-footer"><cite title="Source Title">Narrator</cite></footer>
+                </blockquote>
+              </div>
             </div>
           </div>
-          <div class="card">
-            <h5 class="card-header">
-              Quote
-            </h5>
-            <div class="card-body">
-              <blockquote class="blockquote">
-                <p>
-                  “From the depths of the mirror, a corpse gazed back at me.
-                  The look in his eyes, as they stared into mine, has never left
-                  me”(109).
-                </p>
-                <footer class="blockquote-footer">Elie Wiesel <cite title="Source Title">Night</cite></footer>
-              </blockquote>
+          <div class="row">
+            <div class="card">
+              <h5 class="card-header">
+                <u>Night</u>
+              </h5>
+              <div class="card-body">
+                <blockquote class="blockquote">
+                  <p>
+                    “From the depths of the mirror, a corpse gazed back at me.
+                    The look in his eyes, as they stared into mine, has never left
+                    me”(109).
+                  </p>
+                  <footer class="blockquote-footer"><cite title="Source Title">Elie Wiesel</cite></footer>
+                </blockquote>
+              </div>
             </div>
           </div>
+          
+          <!-- grid -->
+          
   	    </div>
   	  </div>
+  	  <div class="slide">
+  	    <div class="container section-content">
+  	      <div class="row">
+  	        <h3>Notable Example: Slavery</h3>
+  	      </div>
+  	      <div class="row">
+  	        <div class="card">
+              <h5 class="card-header">
+                <u>FacingHistory.org</u>
+              </h5>
+              <div class="card-body">
+                <blockquote class="blockquote">
+                  <p>
+                    "The master's name was usually adopted by a slave after he 
+                    was set free. This was done more because it was the logical 
+                    thing to do and the easiest way to be identified“
+                  </p>
+                  <footer class="blockquote-footer"><cite title="Source Title">Martin Jackson,</cite> former slave</footer>
+                </blockquote>
+              </div>
+            </div>
+  	      </div>
+  	    </div>
+  	  </div>
+  	  <div class="slide">
+  	    <div class="container">
+  	      <div class="row">
+  	        <div class="col">
+  	          Div1
+  	        </div>
+  	        <div class="col">
+  	          Div2
+  	        </div>
+  	      </div>
+  	    </div>
+  	  </div>
+  	  
+  	  <!-- slides -->
+  	  
   	</div>
   </div>
 </div>
@@ -132,5 +184,3 @@
 </div>
 
 -->
-
-Hello
