Update inspiration page

--- a/app/views/static_pages/inspiration.html.erb
+++ b/app/views/static_pages/inspiration.html.erb
@@ -45,15 +45,20 @@
   	<div class="section">
   	  <div class="slide">
   	    <div class="section-content">
-    	    <h2>The dangers of</h2>
-      	  <h3>Loss of Individuality</h3>
-      	</div>
+  	      <h1>Thematical Motivators</h1>
+  	    </div>
   	  </div>
   	  <div class="slide">
   	    <div class="section-content">
-    	    <h4>Keeping one's sense of identity is essential for their well being</h4>
-    	  </div>
+    	    <h2>The dangers of</h2>
+      	  <h3>Loss of Individuality</h3>
+      	  <br><br>
+      	  <h4><u>Keeping one's sense of identity is essential for their well being</u></h4>
+      	</div>
   	  </div>
+  	  
+  	  <!-- slide -->
+  	  
   	  <div class="slide">
   	    <div class="section-content">
   	      
@@ -76,8 +81,6 @@
                 </blockquote>
               </div>
             </div>
-          </div>
-          <div class="row">
             <div class="card">
               <h5 class="card-header">
                 <u>Night</u>
@@ -99,6 +102,9 @@
           
   	    </div>
   	  </div>
+  	  
+  	  <!-- slide -->
+  	  
   	  <div class="slide">
   	    <div class="container section-content">
   	      <div class="row">
@@ -125,19 +131,83 @@
   	  </div>
   	  <div class="slide">
   	    <div class="container">
+  	      <figure class="figure">
+            <img src="https://images.huffingtonpost.com/2016-04-19-1461067166-2010535-slaves-thumb.jpg" class="figure-img img-fluid rounded img-thumbnail" alt="Slaves">
+            <figcaption class="figure-caption">Unnamed slaves in chains</figcaption>
+          </figure>
+  	    </div>
+  	  </div>
+  	 
+  	 <!-- slide -->
+  	  
+  	  <div class="slide">
+  	    <div class="section-content">
+  	      
+  	      <!-- grid -->
+  	      
   	      <div class="row">
-  	        <div class="col">
-  	          Div1
-  	        </div>
-  	        <div class="col">
-  	          Div2
-  	        </div>
-  	      </div>
+    	      <div class="card">
+              <h5 class="card-header">
+                <u>Dawn</u>
+              </h5>
+              <div class="card-body">
+                <blockquote class="blockquote">
+                  <p>
+                    “The night lifted, leaving behind it a grayish light the 
+                    color of stagnant water. Soon there was only a tattered 
+                    fragment of darkness, hanging in mid-air, the other side of 
+                    the window. Fear caught my throat. The tattered fragment of 
+                    darkness had a face. The face was my own“(96).
+                  </p>
+                  <footer class="blockquote-footer"><cite title="Source Title">Narrator</cite></footer>
+                </blockquote>
+              </div>
+            </div>
+            <div class="card">
+              <h5 class="card-header">
+                <u>Mob Mentality</u>
+              </h5>
+              <div class="card-body">
+                <blockquote class="blockquote">
+                  <p>
+                    "Although humans exhibit strong preferences for equity and
+                    moral prohibitions against harm in many contexts, people's 
+                    priorities change when there is an 'us' and a 'them,'"(qtd.
+                    in Wolford)
+                  </p>
+                  <footer class="blockquote-footer">Medical Daily articly by <cite title="Source Title">Ben Wolford</cite></footer>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+          
+          <!-- grid -->
+          
   	    </div>
   	  </div>
   	  
+  	  <!-- slide -->
+  	  
+  	  <div class="slide">
+  	    <div class="container section-content">
+  	      <h3>
+  	        <small>Regardless of context,</small> stripping people of their
+  	        identities leaves them vulnerable to oppressors.
+  	      </h3>
+  	    </div>
+  	  </div>
+  	  
+  	  
   	  <!-- slides -->
   	  
+  	</div>
+  	<div class="section dark">
+  	  <div class="container section-content">
+  	    <h3>
+  	        <small>Six Million Stories aims to combat these dangers by </small> 
+  	        humanizing each individual in the statistics of tragedies.
+  	    </h3>
+  	  </div>
   	</div>
   </div>
 </div>
