--- a/app/views/static_pages/inspiration.html.erb
+++ b/app/views/static_pages/inspiration.html.erb
@@ -1,3 +1,11 @@
+<script>
+  $(document).ready(function() {
+  	$('#fullpage').fullpage({
+  	  sectionsColor : ['#AD4337', '#E7E1DD', '#AD4337', '#E7E1DD', '#AD4337']
+  	});
+  });
+</script>
+
 <div class="row">
   <div id="fullpage">
     <div class="section">
