--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
       </ul>
     </small>
     <ul class="list-unstyled">
-      <li><%= link_to "Inspiration", inspiration_path %></li>
+      <%# <li><%= link_to "Inspiration", inspiration_path %1></li> %>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
       <li><%= link_to "For Teachers", for_teachers_path%></li>
