--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,15 +3,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <% if cookies[:lockup] %>
-        <li class="nav-item"> <%= link_to "Timers", timers_index_path, class: "nav-link" %></li>
+        <li class="nav-item"> <%= link_to "Counters", timers_index_path, class: "nav-link" %></li>
         <li class="nav-item"> <%= link_to "New Story", new_story_path, class: "nav-link" %></li>
         <li class="nav-item"> <%= link_to "Stories", stories_path, class: "nav-link" %></li>
       <% end %>
       <% if logged_in? %>
-        <li class="nav-item"> <%= link_to "Reset Timer", '#', class: "nav-link" %></li>
+        <%# <li class="nav-item"> <%= link_to "Reset Timer", '#', class: "nav-link" %1></li> %>
         <li class="nav-item"> <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %></li>
       <% else %>
-        <li class="nav-item"> <%= link_to "New Timer", new_timer_path, class: "nav-link" %></li>
+        <li class="nav-item"> <%= link_to "New Counter", new_timer_path, class: "nav-link" %></li>
       <% end %>
     </ul>
   </div>
